# GP2040-CE-v0.7.7

configs/Pico/: BoardConfig.h
headers/: tusb_config.h
headers/addons/: neopicoleds.h
headers/gamepad/: GamepadConfig.h
lib/AnimationStation/: CMakeLists.txt
lib/AnimationStation/src/: Animation.cpp  Animation.hpp  AnimationStation.cpp  AnimationStation.hpp
lib/AnimationStation/src/Effects/: Breath.cpp  Breath.hpp  ButtonBreath.cpp  ButtonBreath.hpp  Chase.cpp  CloseAll.cpp  CloseAll.hpp
lib/TinyUSB_Gamepad/src/: tusb_driver.cpp  usb_descriptors.cpp
proto/: config.proto
src/: config_utils.cpp  gamepad.cpp  gp2040.cpp
src/addons/: neopicoleds.cpp
